--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: Lsy200304144815
+    username: yourusername
+    password: yourpassword
     url: jdbc:mysql://localhost:3306/big_event
   data:
     redis:
